# devops-course-basic-app-ci

./: setup.cfg
.github/workflows/: python-ci.yml
