[metadata]
name = devops-course-basic-app-ci
version = 1.0.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

# Flake8
[flake8]
max-line-length = 120
extend-ignore =
    E203
    E266
    E501
    W503
exclude =
    .git,
    __pycache__,
    venv,
    .venv,
    build,
    dist

# Nose
[nose]
verbosity = 2
